--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@vue/cli-plugin-router": "~4.5.0",
         "@vue/cli-plugin-vuex": "~4.5.0",
         "@vue/cli-service": "~4.5.0",
+        "css-loader": "^5.1.3",
+        "file-loader": "^6.2.0",
         "node-sass": "^4.14.1",
         "sass-loader": "^8.0.2",
         "vue-template-compiler": "^2.6.11"
